log
Fri Apr 22 11:26:56 HSP 2022: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
78d0b49
Fri Apr 22 11:40:32 HSP 2022: 
 treemap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  11|6
total_score: 15/70
7d7acab
Fri Apr 22 12:14:41 HSP 2022: 
 treemap.c | 29 +++++++++++++++++++++++++++++
 1 file changed, 29 insertions(+)
 tests:  10|6
total_score: 15/70
df690d3
Fri Apr 22 12:16:31 HSP 2022: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  12|6
total_score: 15/70
b99e248
Fri Apr 22 14:39:59 HSP 2022: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  12|6
total_score: 15/70
9d2e3bd
Fri Apr 22 14:40:43 HSP 2022: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  13|5
total_score: 25/70
05bead1
Fri Apr 22 14:46:06 HSP 2022: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
713a914
Fri Apr 22 14:57:49 HSP 2022: 
 treemap.c | 26 ++++++++++++++++++++++++++
 1 file changed, 26 insertions(+)
 tests:  15|4
total_score: 25/70
4eab48f
Fri Apr 22 14:58:36 HSP 2022: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  15|4
total_score: 25/70
548234a
Fri Apr 22 14:59:15 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
3cfea4a
Fri Apr 22 15:22:56 HSP 2022: 
 treemap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  16|4
total_score: 30/70
e2a9b97
Fri Apr 22 15:33:42 HSP 2022: 
 treemap.c | 24 +++++++++++++++++++++---
 1 file changed, 21 insertions(+), 3 deletions(-)
 tests:  16|4
total_score: 30/70
d8fd06b
Fri Apr 22 15:35:09 HSP 2022: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
9a20d4c
Fri Apr 22 15:36:11 HSP 2022: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
9bf3f70
Sun Apr 24 19:59:43 HSP 2022: 
 treemap.c | 41 +++++++++++++++++++----------------------
 1 file changed, 19 insertions(+), 22 deletions(-)
 tests:  17|4
total_score: 35/70
115ebeb
Sun Apr 24 20:02:06 HSP 2022: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  18|3
total_score: 40/70
dbe9ee0
Sun Apr 24 20:03:50 HSP 2022: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'firstTreeMap':
treemap.c:197:16: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     return tree->current;
            ~~~~^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
50463ce
Sun Apr 24 20:04:04 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  20|2
total_score: 45/70
31b7178
Sun Apr 24 20:08:57 HSP 2022: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
65d1fad
Sun Apr 24 20:10:29 HSP 2022: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
d42c8f6
Sun Apr 24 20:12:38 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  22|2
total_score: 50/70
d417f31
Sun Apr 24 20:48:59 HSP 2022: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'nextTreeMap':
treemap.c:207:16: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     return tree->root;
            ~~~~^~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
ed59351
Sun Apr 24 20:49:12 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  22|2
total_score: 50/70
6cd1f72
Sun Apr 24 20:51:40 HSP 2022: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  22|2
total_score: 50/70
608f27b
Sun Apr 24 21:32:50 HSP 2022: 
 treemap.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
 tests:  0|2
888ee5b
Sun Apr 24 21:34:55 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  23|2
total_score: 55/70
ce3b385
Sun Apr 24 22:01:06 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  24|2
total_score: 50/70
b57ffb2
Sun Apr 24 22:02:41 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  22|2
total_score: 55/70
2d35324
Sun Apr 24 22:16:06 HSP 2022: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
total_score: 50/70
1a2b909
Sun Apr 24 22:23:32 HSP 2022: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  22|2
total_score: 50/70
6acae24
Sun Apr 24 22:31:53 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  24|1
total_score: 50/70
41801ad
Sun Apr 24 23:17:37 HSP 2022: 
 treemap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'upperBound':
treemap.c:197:12: error: implicit declaration of function 'is' [-Werror=implicit-function-declaration]
     while (is(lower_than_int(aux->key, key)))
            ^~
treemap.c:197:15: error: implicit declaration of function 'lower_than_int' [-Werror=implicit-function-declaration]
     while (is(lower_than_int(aux->key, key)))
               ^~~~~~~~~~~~~~
treemap.c:199:12: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
        aux = nextTreeMap;
            ^
cc1.exe: all warnings being treated as errors
Compilation failed
22a5751
